// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notice demo -- base 1`] = `
.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #d2d6ea;
  background: #fafafc;
}

.emotion-4 .uc-fe-notice-icon-wrap,
.emotion-4 .uc-fe-notice-action,
.emotion-4 .uc-fe-notice-close {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 18px;
  line-height: 18px;
}

.emotion-4 .uc-fe-notice-icon-wrap {
  width: 15px;
  padding-right: 8px;
  font-size: 15px;
  color: inherit;
}

.emotion-4 .uc-fe-notice-icon-wrap .uc-fe-notice-icon {
  fill: #3860f4;
  color: #3860f4;
}

.emotion-4 .uc-fe-notice-content {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-4 .uc-fe-notice-action {
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
  color: #526075;
}

.emotion-4 .uc-fe-notice-close {
  padding-left: 8px;
  width: 12px;
}

.emotion-4 .uc-fe-notice-close > .uc-fe-notice-icon {
  cursor: pointer;
}

.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 15px;
  height: 15px;
}

.emotion-2 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #9effa5;
  background: #e6ffed;
}

.emotion-10 .uc-fe-notice-icon-wrap,
.emotion-10 .uc-fe-notice-action,
.emotion-10 .uc-fe-notice-close {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 18px;
  line-height: 18px;
}

.emotion-10 .uc-fe-notice-icon-wrap {
  width: 15px;
  padding-right: 8px;
  font-size: 15px;
  color: inherit;
}

.emotion-10 .uc-fe-notice-icon-wrap .uc-fe-notice-icon {
  fill: #15ad31;
  color: #15ad31;
}

.emotion-10 .uc-fe-notice-content {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-10 .uc-fe-notice-action {
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
  color: #526075;
}

.emotion-10 .uc-fe-notice-close {
  padding-left: 8px;
  width: 12px;
}

.emotion-10 .uc-fe-notice-close > .uc-fe-notice-icon {
  cursor: pointer;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #ffe38d;
  background: #fffce6;
}

.emotion-16 .uc-fe-notice-icon-wrap,
.emotion-16 .uc-fe-notice-action,
.emotion-16 .uc-fe-notice-close {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 18px;
  line-height: 18px;
}

.emotion-16 .uc-fe-notice-icon-wrap {
  width: 15px;
  padding-right: 8px;
  font-size: 15px;
  color: inherit;
}

.emotion-16 .uc-fe-notice-icon-wrap .uc-fe-notice-icon {
  fill: #ffc42e;
  color: #ffc42e;
}

.emotion-16 .uc-fe-notice-content {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-16 .uc-fe-notice-action {
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
  color: #526075;
}

.emotion-16 .uc-fe-notice-close {
  padding-left: 8px;
  width: 12px;
}

.emotion-16 .uc-fe-notice-close > .uc-fe-notice-icon {
  cursor: pointer;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #fed4d4;
  background: #fff0f0;
}

.emotion-22 .uc-fe-notice-icon-wrap,
.emotion-22 .uc-fe-notice-action,
.emotion-22 .uc-fe-notice-close {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 18px;
  line-height: 18px;
}

.emotion-22 .uc-fe-notice-icon-wrap {
  width: 15px;
  padding-right: 8px;
  font-size: 15px;
  color: inherit;
}

.emotion-22 .uc-fe-notice-icon-wrap .uc-fe-notice-icon {
  fill: #f44336;
  color: #f44336;
}

.emotion-22 .uc-fe-notice-content {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-22 .uc-fe-notice-action {
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
  color: #526075;
}

.emotion-22 .uc-fe-notice-close {
  padding-left: 8px;
  width: 12px;
}

.emotion-22 .uc-fe-notice-close > .uc-fe-notice-icon {
  cursor: pointer;
}

.emotion-28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #cccccc;
  border: 1px solid #d9d9d9;
  background: #f7f7f7;
}

.emotion-28 .uc-fe-notice-icon-wrap,
.emotion-28 .uc-fe-notice-action,
.emotion-28 .uc-fe-notice-close {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 18px;
  line-height: 18px;
}

.emotion-28 .uc-fe-notice-icon-wrap {
  width: 15px;
  padding-right: 8px;
  font-size: 15px;
  color: inherit;
}

.emotion-28 .uc-fe-notice-icon-wrap .uc-fe-notice-icon {
  fill: #cccccc;
  color: #cccccc;
}

.emotion-28 .uc-fe-notice-content {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-28 .uc-fe-notice-action {
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
  color: #526075;
}

.emotion-28 .uc-fe-notice-close {
  padding-left: 8px;
  width: 12px;
}

.emotion-28 .uc-fe-notice-close > .uc-fe-notice-icon {
  cursor: pointer;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #d2d6ea;
  background: #fafafc;
}

.emotion-4 .uc-fe-notice-icon-wrap,
.emotion-4 .uc-fe-notice-action,
.emotion-4 .uc-fe-notice-close {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 18px;
  line-height: 18px;
}

.emotion-4 .uc-fe-notice-icon-wrap {
  width: 15px;
  padding-right: 8px;
  font-size: 15px;
  color: inherit;
}

.emotion-4 .uc-fe-notice-icon-wrap .uc-fe-notice-icon {
  fill: #3860f4;
  color: #3860f4;
}

.emotion-4 .uc-fe-notice-content {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-4 .uc-fe-notice-action {
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
  color: #526075;
}

.emotion-4 .uc-fe-notice-close {
  padding-left: 8px;
  width: 12px;
}

.emotion-4 .uc-fe-notice-close > .uc-fe-notice-icon {
  cursor: pointer;
}

.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 15px;
  height: 15px;
}

.emotion-2 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #9effa5;
  background: #e6ffed;
}

.emotion-10 .uc-fe-notice-icon-wrap,
.emotion-10 .uc-fe-notice-action,
.emotion-10 .uc-fe-notice-close {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 18px;
  line-height: 18px;
}

.emotion-10 .uc-fe-notice-icon-wrap {
  width: 15px;
  padding-right: 8px;
  font-size: 15px;
  color: inherit;
}

.emotion-10 .uc-fe-notice-icon-wrap .uc-fe-notice-icon {
  fill: #15ad31;
  color: #15ad31;
}

.emotion-10 .uc-fe-notice-content {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-10 .uc-fe-notice-action {
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
  color: #526075;
}

.emotion-10 .uc-fe-notice-close {
  padding-left: 8px;
  width: 12px;
}

.emotion-10 .uc-fe-notice-close > .uc-fe-notice-icon {
  cursor: pointer;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #ffe38d;
  background: #fffce6;
}

.emotion-16 .uc-fe-notice-icon-wrap,
.emotion-16 .uc-fe-notice-action,
.emotion-16 .uc-fe-notice-close {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 18px;
  line-height: 18px;
}

.emotion-16 .uc-fe-notice-icon-wrap {
  width: 15px;
  padding-right: 8px;
  font-size: 15px;
  color: inherit;
}

.emotion-16 .uc-fe-notice-icon-wrap .uc-fe-notice-icon {
  fill: #ffc42e;
  color: #ffc42e;
}

.emotion-16 .uc-fe-notice-content {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-16 .uc-fe-notice-action {
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
  color: #526075;
}

.emotion-16 .uc-fe-notice-close {
  padding-left: 8px;
  width: 12px;
}

.emotion-16 .uc-fe-notice-close > .uc-fe-notice-icon {
  cursor: pointer;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #fed4d4;
  background: #fff0f0;
}

.emotion-22 .uc-fe-notice-icon-wrap,
.emotion-22 .uc-fe-notice-action,
.emotion-22 .uc-fe-notice-close {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 18px;
  line-height: 18px;
}

.emotion-22 .uc-fe-notice-icon-wrap {
  width: 15px;
  padding-right: 8px;
  font-size: 15px;
  color: inherit;
}

.emotion-22 .uc-fe-notice-icon-wrap .uc-fe-notice-icon {
  fill: #f44336;
  color: #f44336;
}

.emotion-22 .uc-fe-notice-content {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-22 .uc-fe-notice-action {
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
  color: #526075;
}

.emotion-22 .uc-fe-notice-close {
  padding-left: 8px;
  width: 12px;
}

.emotion-22 .uc-fe-notice-close > .uc-fe-notice-icon {
  cursor: pointer;
}

.emotion-28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #cccccc;
  border: 1px solid #d9d9d9;
  background: #f7f7f7;
}

.emotion-28 .uc-fe-notice-icon-wrap,
.emotion-28 .uc-fe-notice-action,
.emotion-28 .uc-fe-notice-close {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 18px;
  line-height: 18px;
}

.emotion-28 .uc-fe-notice-icon-wrap {
  width: 15px;
  padding-right: 8px;
  font-size: 15px;
  color: inherit;
}

.emotion-28 .uc-fe-notice-icon-wrap .uc-fe-notice-icon {
  fill: #cccccc;
  color: #cccccc;
}

.emotion-28 .uc-fe-notice-content {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-28 .uc-fe-notice-action {
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
  color: #526075;
}

.emotion-28 .uc-fe-notice-close {
  padding-left: 8px;
  width: 12px;
}

.emotion-28 .uc-fe-notice-close > .uc-fe-notice-icon {
  cursor: pointer;
}

<div>
  <div
    class="emotion-4 emotion-5"
    style="margin-bottom:8px"
  >
    <span
      class="uc-fe-notice-icon-wrap"
    >
      <svg
        class="uc-fe-notice-icon emotion-0 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M12,2 C6.47727273,2 2,6.47727273 2,12 C2,17.5227273 6.47727273,22 12,22 C17.5227273,22 22,17.5227273 22,12 C22,6.47727273 17.5227273,2 12,2 Z M11,5.8988764 C11,5.40449438 11.45,5 12,5 C12.55,5 13,5.40449438 13,5.8988764 L13,14.1011236 C13,14.5955056 12.55,15 12,15 C11.45,15 11,14.5955056 11,14.1011236 L11,5.8988764 Z M12,18 C11.452381,18 11,17.547619 11,17 C11,16.452381 11.452381,16 12,16 C12.547619,16 13,16.452381 13,17 C13,17.547619 12.5714286,18 12,18 Z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <div
      class="uc-fe-notice-content"
    >
      Notice content
    </div>
    <span
      class="uc-fe-notice-close"
    >
      <svg
        class="uc-fe-notice-icon emotion-2 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
        />
      </svg>
    </span>
  </div>
  <div
    class="emotion-10 emotion-5"
    style="margin-bottom:8px"
  >
    <span
      class="uc-fe-notice-icon-wrap"
    >
      <svg
        class="uc-fe-notice-icon emotion-0 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M12,2 C6.47727273,2 2,6.47727273 2,12 C2,17.5227273 6.47727273,22 12,22 C17.5227273,22 22,17.5227273 22,12 C22,6.47727273 17.5227273,2 12,2 Z M11,5.8988764 C11,5.40449438 11.45,5 12,5 C12.55,5 13,5.40449438 13,5.8988764 L13,14.1011236 C13,14.5955056 12.55,15 12,15 C11.45,15 11,14.5955056 11,14.1011236 L11,5.8988764 Z M12,18 C11.452381,18 11,17.547619 11,17 C11,16.452381 11.452381,16 12,16 C12.547619,16 13,16.452381 13,17 C13,17.547619 12.5714286,18 12,18 Z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <div
      class="uc-fe-notice-content"
    >
      Notice content
    </div>
    <span
      class="uc-fe-notice-close"
    >
      <svg
        class="uc-fe-notice-icon emotion-2 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
        />
      </svg>
    </span>
  </div>
  <div
    class="emotion-16 emotion-5"
    style="margin-bottom:8px"
  >
    <span
      class="uc-fe-notice-icon-wrap"
    >
      <svg
        class="uc-fe-notice-icon emotion-0 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M12,2 C6.47727273,2 2,6.47727273 2,12 C2,17.5227273 6.47727273,22 12,22 C17.5227273,22 22,17.5227273 22,12 C22,6.47727273 17.5227273,2 12,2 Z M11,5.8988764 C11,5.40449438 11.45,5 12,5 C12.55,5 13,5.40449438 13,5.8988764 L13,14.1011236 C13,14.5955056 12.55,15 12,15 C11.45,15 11,14.5955056 11,14.1011236 L11,5.8988764 Z M12,18 C11.452381,18 11,17.547619 11,17 C11,16.452381 11.452381,16 12,16 C12.547619,16 13,16.452381 13,17 C13,17.547619 12.5714286,18 12,18 Z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <div
      class="uc-fe-notice-content"
    >
      Notice content
    </div>
    <span
      class="uc-fe-notice-close"
    >
      <svg
        class="uc-fe-notice-icon emotion-2 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
        />
      </svg>
    </span>
  </div>
  <div
    class="emotion-22 emotion-5"
    style="margin-bottom:8px"
  >
    <span
      class="uc-fe-notice-icon-wrap"
    >
      <svg
        class="uc-fe-notice-icon emotion-0 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M12,2 C6.47727273,2 2,6.47727273 2,12 C2,17.5227273 6.47727273,22 12,22 C17.5227273,22 22,17.5227273 22,12 C22,6.47727273 17.5227273,2 12,2 Z M11,5.8988764 C11,5.40449438 11.45,5 12,5 C12.55,5 13,5.40449438 13,5.8988764 L13,14.1011236 C13,14.5955056 12.55,15 12,15 C11.45,15 11,14.5955056 11,14.1011236 L11,5.8988764 Z M12,18 C11.452381,18 11,17.547619 11,17 C11,16.452381 11.452381,16 12,16 C12.547619,16 13,16.452381 13,17 C13,17.547619 12.5714286,18 12,18 Z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <div
      class="uc-fe-notice-content"
    >
      Notice content
    </div>
    <span
      class="uc-fe-notice-close"
    >
      <svg
        class="uc-fe-notice-icon emotion-2 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
        />
      </svg>
    </span>
  </div>
  <div
    class="emotion-28 emotion-5"
    style="margin-bottom:8px"
  >
    <span
      class="uc-fe-notice-icon-wrap"
    >
      <svg
        class="uc-fe-notice-icon emotion-0 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M12,2 C6.47727273,2 2,6.47727273 2,12 C2,17.5227273 6.47727273,22 12,22 C17.5227273,22 22,17.5227273 22,12 C22,6.47727273 17.5227273,2 12,2 Z M11,5.8988764 C11,5.40449438 11.45,5 12,5 C12.55,5 13,5.40449438 13,5.8988764 L13,14.1011236 C13,14.5955056 12.55,15 12,15 C11.45,15 11,14.5955056 11,14.1011236 L11,5.8988764 Z M12,18 C11.452381,18 11,17.547619 11,17 C11,16.452381 11.452381,16 12,16 C12.547619,16 13,16.452381 13,17 C13,17.547619 12.5714286,18 12,18 Z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <div
      class="uc-fe-notice-content"
    >
      Notice content
    </div>
    <span
      class="uc-fe-notice-close"
    >
      <svg
        class="uc-fe-notice-icon emotion-2 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Notice demo -- custom 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #d2d6ea;
  background: #fafafc;
}

.emotion-2 .uc-fe-notice-icon-wrap,
.emotion-2 .uc-fe-notice-action,
.emotion-2 .uc-fe-notice-close {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 18px;
  line-height: 18px;
}

.emotion-2 .uc-fe-notice-icon-wrap {
  width: 15px;
  padding-right: 8px;
  font-size: 15px;
  color: inherit;
}

.emotion-2 .uc-fe-notice-icon-wrap .uc-fe-notice-icon {
  fill: #3860f4;
  color: #3860f4;
}

.emotion-2 .uc-fe-notice-content {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-2 .uc-fe-notice-action {
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
  color: #526075;
}

.emotion-2 .uc-fe-notice-close {
  padding-left: 8px;
  width: 12px;
}

.emotion-2 .uc-fe-notice-close > .uc-fe-notice-icon {
  cursor: pointer;
}

.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 15px;
  height: 15px;
}

.emotion-4 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
}

.emotion-12 {
  vertical-align: baseline;
}

.emotion-18 {
  vertical-align: baseline;
}

.emotion-18.emotion-18.emotion-18 {
  -webkit-animation: animation-0 1.2s infinite linear;
  animation: animation-0 1.2s infinite linear;
  line-height: normal;
}

@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #d2d6ea;
  background: #fafafc;
}

.emotion-2 .uc-fe-notice-icon-wrap,
.emotion-2 .uc-fe-notice-action,
.emotion-2 .uc-fe-notice-close {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 18px;
  line-height: 18px;
}

.emotion-2 .uc-fe-notice-icon-wrap {
  width: 15px;
  padding-right: 8px;
  font-size: 15px;
  color: inherit;
}

.emotion-2 .uc-fe-notice-icon-wrap .uc-fe-notice-icon {
  fill: #3860f4;
  color: #3860f4;
}

.emotion-2 .uc-fe-notice-content {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-2 .uc-fe-notice-action {
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
  color: #526075;
}

.emotion-2 .uc-fe-notice-close {
  padding-left: 8px;
  width: 12px;
}

.emotion-2 .uc-fe-notice-close > .uc-fe-notice-icon {
  cursor: pointer;
}

.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 15px;
  height: 15px;
}

.emotion-4 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
}

.emotion-12 {
  vertical-align: baseline;
}

.emotion-18 {
  vertical-align: baseline;
}

.emotion-18.emotion-18.emotion-18 {
  -webkit-animation: animation-0 1.2s infinite linear;
  animation: animation-0 1.2s infinite linear;
  line-height: normal;
}

<div>
  <div
    class="emotion-2 emotion-3"
    style="margin-bottom:8px"
  >
    <span
      class="uc-fe-notice-icon-wrap"
    >
      <svg
        class="uc-fe-notice-icon emotion-0 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M12,2 C6.47727273,2 2,6.47727273 2,12 C2,17.5227273 6.47727273,22 12,22 C17.5227273,22 22,17.5227273 22,12 C22,6.47727273 17.5227273,2 12,2 Z M11,5.8988764 C11,5.40449438 11.45,5 12,5 C12.55,5 13,5.40449438 13,5.8988764 L13,14.1011236 C13,14.5955056 12.55,15 12,15 C11.45,15 11,14.5955056 11,14.1011236 L11,5.8988764 Z M12,18 C11.452381,18 11,17.547619 11,17 C11,16.452381 11.452381,16 12,16 C12.547619,16 13,16.452381 13,17 C13,17.547619 12.5714286,18 12,18 Z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <div
      class="uc-fe-notice-content"
    >
      Notice content
    </div>
  </div>
  <div
    class="emotion-2 emotion-3"
    style="margin-bottom:8px"
  >
    <div
      class="uc-fe-notice-content"
    >
      Notice content
    </div>
    <span
      class="uc-fe-notice-close"
    >
      <svg
        class="uc-fe-notice-icon emotion-4 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
        />
      </svg>
    </span>
  </div>
  <div
    class="emotion-2 emotion-3"
    style="margin-bottom:8px"
  >
    <div
      class="uc-fe-notice-content"
    >
      Notice content
    </div>
    <span
      class="uc-fe-notice-close"
    >
      <svg
        class="uc-fe-notice-icon emotion-4 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
        />
      </svg>
    </span>
  </div>
  <div
    class="emotion-2 emotion-3"
    style="margin-bottom:8px"
  >
    <span
      class="uc-fe-notice-icon-wrap"
    >
      <i
        class="uc-fe-icon icon__loading uc-fe-notice-icon emotion-12 emotion-13"
      />
    </span>
    <div
      class="uc-fe-notice-content"
    >
      Notice content
    </div>
    <span
      class="uc-fe-notice-close"
    >
      <svg
        class="uc-fe-notice-icon emotion-4 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
        />
      </svg>
    </span>
  </div>
  <div
    class="emotion-2 emotion-3"
    style="margin-bottom:8px"
  >
    <span
      class="uc-fe-notice-icon-wrap"
    >
      <i
        class="uc-fe-icon icon__loading uc-fe-icon-spin emotion-18 emotion-13"
      />
    </span>
    <div
      class="uc-fe-notice-content"
    >
      Notice content
    </div>
    <span
      class="uc-fe-notice-close"
    >
      <svg
        class="uc-fe-notice-icon emotion-4 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
        />
      </svg>
    </span>
  </div>
  <div
    class="emotion-2 emotion-3"
    style="margin-bottom:8px"
  >
    <span
      class="uc-fe-notice-icon-wrap"
    >
      <svg
        class="uc-fe-notice-icon emotion-0 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M12,2 C6.47727273,2 2,6.47727273 2,12 C2,17.5227273 6.47727273,22 12,22 C17.5227273,22 22,17.5227273 22,12 C22,6.47727273 17.5227273,2 12,2 Z M11,5.8988764 C11,5.40449438 11.45,5 12,5 C12.55,5 13,5.40449438 13,5.8988764 L13,14.1011236 C13,14.5955056 12.55,15 12,15 C11.45,15 11,14.5955056 11,14.1011236 L11,5.8988764 Z M12,18 C11.452381,18 11,17.547619 11,17 C11,16.452381 11.452381,16 12,16 C12.547619,16 13,16.452381 13,17 C13,17.547619 12.5714286,18 12,18 Z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <div
      class="uc-fe-notice-content"
    >
      Notice content
    </div>
    <span
      class="uc-fe-notice-action"
    >
      <i
        class="uc-fe-icon icon__loading emotion-12 emotion-13"
      />
    </span>
    <span
      class="uc-fe-notice-close"
    >
      <svg
        class="uc-fe-notice-icon emotion-4 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
        />
      </svg>
    </span>
  </div>
  <div
    class="emotion-2 emotion-3"
    style="margin-bottom:8px"
  >
    <span
      class="uc-fe-notice-icon-wrap"
    >
      <svg
        class="uc-fe-notice-icon emotion-0 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M12,2 C6.47727273,2 2,6.47727273 2,12 C2,17.5227273 6.47727273,22 12,22 C17.5227273,22 22,17.5227273 22,12 C22,6.47727273 17.5227273,2 12,2 Z M11,5.8988764 C11,5.40449438 11.45,5 12,5 C12.55,5 13,5.40449438 13,5.8988764 L13,14.1011236 C13,14.5955056 12.55,15 12,15 C11.45,15 11,14.5955056 11,14.1011236 L11,5.8988764 Z M12,18 C11.452381,18 11,17.547619 11,17 C11,16.452381 11.452381,16 12,16 C12.547619,16 13,16.452381 13,17 C13,17.547619 12.5714286,18 12,18 Z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <div
      class="uc-fe-notice-content"
    >
      Notice content Notice content Notice content Notice content Notice content Notice content Notice content Notice content Notice content Notice content Notice content Notice content
    </div>
    <span
      class="uc-fe-notice-action"
    >
      <i
        class="uc-fe-icon icon__loading emotion-12 emotion-13"
      />
    </span>
    <span
      class="uc-fe-notice-close"
    >
      <svg
        class="uc-fe-notice-icon emotion-4 emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Notice demo -- notice 1`] = `
.emotion-112 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #d2d6ea;
  background: #fafafc;
}

.emotion-112 .uc-fe-notice-icon-wrap,
.emotion-112 .uc-fe-notice-action,
.emotion-112 .uc-fe-notice-close {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 18px;
  line-height: 18px;
}

.emotion-112 .uc-fe-notice-icon-wrap {
  width: 15px;
  padding-right: 8px;
  font-size: 15px;
  color: inherit;
}

.emotion-112 .uc-fe-notice-icon-wrap .uc-fe-notice-icon {
  fill: #3860f4;
  color: #3860f4;
}

.emotion-112 .uc-fe-notice-content {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-112 .uc-fe-notice-action {
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
  color: #526075;
}

.emotion-112 .uc-fe-notice-close {
  padding-left: 8px;
  width: 12px;
}

.emotion-112 .uc-fe-notice-close > .uc-fe-notice-icon {
  cursor: pointer;
}

.emotion-110 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 15px;
  height: 15px;
}

.emotion-108 {
  font-size: 12px;
}

.emotion-108 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-108 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-40 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-40:before,
.emotion-40:after {
  content: ' ';
  display: table;
}

.emotion-40:after {
  clear: both;
}

.emotion-40 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
  color: #526075;
}

.emotion-36 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.emotion-33 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-33 .uc-fe-radio-styletype-default,
.emotion-33 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-33 .uc-fe-radio-styletype-default:last-child,
.emotion-33 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-33 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-33 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-33 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-33 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-33 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-33 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-33 .uc-fe-radio-styletype-list:last-of-type {
  margin-bottom: 8px;
}

.emotion-7 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-7 > * {
  font-size: 12px;
}

.emotion-7 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-7.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-5.uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-5 .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-5.uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-5 .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.emotion-3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 14px;
  height: 14px;
}

.emotion-13 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-13 > * {
  font-size: 12px;
}

.emotion-13 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-13.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-13:hover .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-11.uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-11 .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-45 {
  position: relative;
  cursor: pointer;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 73px;
}

.emotion-45 .uc-fe-switch-inner {
  border-radius: 2px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.emotion-45 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 6px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 50%;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
}

.emotion-45 .uc-fe-switch-button {
  position: absolute;
  display: block;
  box-sizing: border-box;
  left: 0;
  top: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-45 .uc-fe-switch-button > span {
  display: block;
  width: 100%;
  height: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-45 .uc-fe-switch-tip-on,
.emotion-45 .uc-fe-switch-tip-off {
  width: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-45 .uc-fe-switch-inner {
  background: #f6f6fb;
  border-color: #d2d6ea;
  border-width: 1px;
  border-style: solid;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  color: #526075;
}

.emotion-45 .uc-fe-switch-button {
  width: 28px;
  height: 28px;
  padding: 2px;
}

.emotion-45 .uc-fe-switch-button > span {
  background: #ffffff;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  border: 1px solid #d2d6ea;
}

.emotion-45 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-45:hover .uc-fe-switch-inner {
  border-color: #c3cad9;
}

.emotion-45 .uc-fe-switch-tip-on {
  padding-right: 28px;
}

.emotion-45 .uc-fe-switch-tip-off {
  padding-left: 28px;
}

.emotion-45 .uc-fe-switch-tip-on {
  display: none;
}

.emotion-112 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #d2d6ea;
  background: #fafafc;
}

.emotion-112 .uc-fe-notice-icon-wrap,
.emotion-112 .uc-fe-notice-action,
.emotion-112 .uc-fe-notice-close {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 18px;
  line-height: 18px;
}

.emotion-112 .uc-fe-notice-icon-wrap {
  width: 15px;
  padding-right: 8px;
  font-size: 15px;
  color: inherit;
}

.emotion-112 .uc-fe-notice-icon-wrap .uc-fe-notice-icon {
  fill: #3860f4;
  color: #3860f4;
}

.emotion-112 .uc-fe-notice-content {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-112 .uc-fe-notice-action {
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
  color: #526075;
}

.emotion-112 .uc-fe-notice-close {
  padding-left: 8px;
  width: 12px;
}

.emotion-112 .uc-fe-notice-close > .uc-fe-notice-icon {
  cursor: pointer;
}

.emotion-110 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 15px;
  height: 15px;
}

.emotion-108 {
  font-size: 12px;
}

.emotion-108 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-108 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-40 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-40:before,
.emotion-40:after {
  content: ' ';
  display: table;
}

.emotion-40:after {
  clear: both;
}

.emotion-40 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
  color: #526075;
}

.emotion-36 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.emotion-33 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-33 .uc-fe-radio-styletype-default,
.emotion-33 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-33 .uc-fe-radio-styletype-default:last-child,
.emotion-33 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-33 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-33 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-33 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-33 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-33 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-33 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-33 .uc-fe-radio-styletype-list:last-of-type {
  margin-bottom: 8px;
}

.emotion-7 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-7 > * {
  font-size: 12px;
}

.emotion-7 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-7.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-5.uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-5 .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-5.uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-5 .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.emotion-3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 14px;
  height: 14px;
}

.emotion-13 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-13 > * {
  font-size: 12px;
}

.emotion-13 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-13.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-13:hover .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-11.uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-11 .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-45 {
  position: relative;
  cursor: pointer;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 73px;
}

.emotion-45 .uc-fe-switch-inner {
  border-radius: 2px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.emotion-45 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 6px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 50%;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
}

.emotion-45 .uc-fe-switch-button {
  position: absolute;
  display: block;
  box-sizing: border-box;
  left: 0;
  top: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-45 .uc-fe-switch-button > span {
  display: block;
  width: 100%;
  height: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-45 .uc-fe-switch-tip-on,
.emotion-45 .uc-fe-switch-tip-off {
  width: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-45 .uc-fe-switch-inner {
  background: #f6f6fb;
  border-color: #d2d6ea;
  border-width: 1px;
  border-style: solid;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  color: #526075;
}

.emotion-45 .uc-fe-switch-button {
  width: 28px;
  height: 28px;
  padding: 2px;
}

.emotion-45 .uc-fe-switch-button > span {
  background: #ffffff;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  border: 1px solid #d2d6ea;
}

.emotion-45 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-45:hover .uc-fe-switch-inner {
  border-color: #c3cad9;
}

.emotion-45 .uc-fe-switch-tip-on {
  padding-right: 28px;
}

.emotion-45 .uc-fe-switch-tip-off {
  padding-left: 28px;
}

.emotion-45 .uc-fe-switch-tip-on {
  display: none;
}

<div>
  <form
    class="uc-fe-form demo-form emotion-108 emotion-390"
  >
    <div
      class="uc-fe-row uc-fe-form-item emotion-38 emotion-39 emotion-40 emotion-41"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="2"
      >
        styleType
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-35 emotion-36 emotion-2"
        span="10"
      >
        <div
          class="emotion-33 emotion-34"
        >
          <span
            checked=""
            class="uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-7 emotion-8"
          >
            <span
              checked=""
              class="uc-fe-radio-icon-wrap emotion-5 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              default
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-13 emotion-8"
          >
            <span
              class="uc-fe-radio-icon-wrap emotion-11 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              success
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-13 emotion-8"
          >
            <span
              class="uc-fe-radio-icon-wrap emotion-11 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              warning
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-13 emotion-8"
          >
            <span
              class="uc-fe-radio-icon-wrap emotion-11 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              error
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-13 emotion-8"
          >
            <span
              class="uc-fe-radio-icon-wrap emotion-11 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              disabled
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-38 emotion-39 emotion-40 emotion-41"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="2"
      >
        closable
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-35 emotion-36 emotion-2"
        span="10"
      >
        <div
          class="emotion-45 emotion-46"
        >
          <span
            class="uc-fe-switch-inner"
          >
            <span
              class="uc-fe-switch-tip-on"
            >
              ON
            </span>
            <span
              class="uc-fe-switch-tip-off"
            >
              OFF
            </span>
          </span>
          <span
            class="uc-fe-switch-button"
          >
            <span>
              <span
                class="uc-fe-switch-dot"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-38 emotion-39 emotion-40 emotion-41"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="2"
      >
        icon
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-35 emotion-36 emotion-2"
        span="10"
      >
        <div
          class="emotion-33 emotion-34"
        >
          <span
            checked=""
            class="uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-7 emotion-8"
          >
            <span
              checked=""
              class="uc-fe-radio-icon-wrap emotion-5 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              undefined
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-13 emotion-8"
          >
            <span
              class="uc-fe-radio-icon-wrap emotion-11 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              loading
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-13 emotion-8"
          >
            <span
              class="uc-fe-radio-icon-wrap emotion-11 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              circle
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-38 emotion-39 emotion-40 emotion-41"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="2"
      >
        longContent
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-35 emotion-36 emotion-2"
        span="10"
      >
        <div
          class="emotion-45 emotion-46"
        >
          <span
            class="uc-fe-switch-inner"
          >
            <span
              class="uc-fe-switch-tip-on"
            >
              ON
            </span>
            <span
              class="uc-fe-switch-tip-off"
            >
              OFF
            </span>
          </span>
          <span
            class="uc-fe-switch-button"
          >
            <span>
              <span
                class="uc-fe-switch-dot"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-38 emotion-39 emotion-40 emotion-41"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="2"
      >
        withAction
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-35 emotion-36 emotion-2"
        span="10"
      >
        <div
          class="emotion-45 emotion-46"
        >
          <span
            class="uc-fe-switch-inner"
          >
            <span
              class="uc-fe-switch-tip-on"
            >
              ON
            </span>
            <span
              class="uc-fe-switch-tip-off"
            >
              OFF
            </span>
          </span>
          <span
            class="uc-fe-switch-button"
          >
            <span>
              <span
                class="uc-fe-switch-dot"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="emotion-112 emotion-113"
    >
      <span
        class="uc-fe-notice-icon-wrap"
      >
        <svg
          class="uc-fe-notice-icon emotion-110 emotion-4"
          viewBox="0 0 24 24"
        >
          <path
            d="M12,2 C6.47727273,2 2,6.47727273 2,12 C2,17.5227273 6.47727273,22 12,22 C17.5227273,22 22,17.5227273 22,12 C22,6.47727273 17.5227273,2 12,2 Z M11,5.8988764 C11,5.40449438 11.45,5 12,5 C12.55,5 13,5.40449438 13,5.8988764 L13,14.1011236 C13,14.5955056 12.55,15 12,15 C11.45,15 11,14.5955056 11,14.1011236 L11,5.8988764 Z M12,18 C11.452381,18 11,17.547619 11,17 C11,16.452381 11.452381,16 12,16 C12.547619,16 13,16.452381 13,17 C13,17.547619 12.5714286,18 12,18 Z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <div
        class="uc-fe-notice-content"
      >
        This is a notice
      </div>
    </div>
  </div>
</div>
`;
